<resources>
    <string name="app_name">Gnarly Music Player</string>
    <string name="search_bar_hint">Search</string>
    <string name="add_current_dir">Add current path</string>
    <string name="bookmark_exists">Bookmark already exists</string>
    <string name="cant_add_root_dir">Can\'t add root dir</string>
    <string name="file_list_error">Can\'t list files</string>
    <string name="dir_doesnt_exist">Directory doesn\'t exist</string>
    <string name="file_doesnt_exist">File doesn\'t exist</string>
    <string name="storage_devices">Storage devices</string>
    <string name="about">About</string>
    <string name="backup">Backup</string>
    <string name="n_tracks_added_to_queue">%1$d tracks added to queue</string>
    <string name="cleared_n_tracks">Cleared %1$d tracks</string>
    <string name="reset">Reset</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/pause</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="media_notification">Media notification</string>
    <string name="cant_play_track">Error loading track</string>
    <string name="playback_service_not_running">Playback service not running</string>
    <string name="seek_restore_position">Seek</string>
    <string name="no_track_selected">No track selected</string>
    <string name="load_last_position">Load last position</string>
    <string name="seek_minute_hint">mm</string>
    <string name="seek_second_hint">ss</string>
    <string name="seek_total_time">%1$d:%2$02d/%3$d:%4$02d</string>
    <string name="settings">Settings</string>
    <string name="track_info">Track details</string>
    <string name="track_info_raw">Track details (raw)</string>
    <string name="no_eq_found">No equalizer app found</string>
    <string name="ur_not_a_developer">You won\'t become a developer by clicking this</string>
    <string name="pref_inappenabled">sancho.gnarlymusicplayer.preference.volume.inappenabled</string>
    <string name="pref_totalsteps">sancho.gnarlymusicplayer.preference.volume.totalsteps</string>
    <string name="pref_accentcolor">sancho.gnarlymusicplayer.preference.accentcolor</string>
    <string name="pref_lockvolume">sancho.gnarlymusicplayer.preference.volume.lock</string>
    <string name="pref_lockvolume_start">sancho.gnarlymusicplayer.preference.volume.lock.start</string>
    <string name="pref_autoclean">sancho.gnarlymusicplayer.preference.autoclean</string>
    <string name="pref_ignoreaf">sancho.gnarlymusicplayer.preference.ignoreaf</string>
    <string name="pref_ignoreprevnext">sancho.gnarlymusicplayer.preference.ignoreprevnext</string>
    <string name="pref_btcrackworkaround">sancho.gnarlymusicplayer.preference.btcrackworkaround</string>
    <string name="pref_dontpausemediasess">sancho.gnarlymusicplayer.preference.dontpausemediasess</string>
    <string name="no_track">No track</string>
    <string name="nice">Nice</string>
    <string name="q_clear_queue">Clear queue?</string>
    <string name="q_clear_queue_below">Clear queue below \"%1$s\"?</string>
    <string name="q_clear_queue_above">Clear queue above \"%1$s\"?</string>
    <string name="file_save_error">Error writing to external storage</string>
    <string name="bookmarks">Bookmarks</string>
</resources>
