<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        app:title="Ignore audio focus"
        app:summary="Audio playback will not stop e.g. when other media is played. Audio playback service needs to be restarted for this option to take effect."
        app:key="@string/pref_ignoreaf"
        app:iconSpaceReserved="false"/>

    <CheckBoxPreference
        app:title="Ignore Bluetooth track switch events"
        app:summary="Do not react to previous/next media keys on Bluetooth devices."
        app:key="@string/pref_ignoreprevnext"
        app:iconSpaceReserved="false"/>

    <CheckBoxPreference
        app:title="Bluetooth popping workaround"
        app:summary="Some audio receivers enter a power saving mode after some time of inactivity and when resuming playback a loud cracking/popping sound is produced. To prevent this, play a silent audio track when playback is paused. Battery usage might be slightly increased. Audio playback service needs to be restarted for this option to take effect."
        app:key="@string/pref_btcrackworkaround"
        app:iconSpaceReserved="false"/>

    <CheckBoxPreference
        app:title="Don't pause media session"
        app:summary="Don't let the system know when playback is paused. In some versions of Android this can prevent the system from automatically removing the notification after playback has been paused for a few minutes."
        app:key="@string/pref_dontpausemediasess"
        app:iconSpaceReserved="false"/>

</PreferenceScreen>
