<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/track_title"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="2"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:paddingLeft="15dp"
        android:textColor="@color/notification_content"/>

    <ImageView
        android:id="@+id/action_playpause_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:src="@drawable/pause"
        android:tint="@color/notification_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/play_pause"/>

    <ImageView
        android:id="@+id/action_next_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:src="@drawable/next"
        android:tint="@color/notification_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/next"/>

    <ImageView
        android:id="@+id/action_close_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:src="@drawable/close"
        android:tint="@color/notification_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/close"/>

</LinearLayout>
